[project]
name = "mkdocs"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Daniel Rodriguez", email = "danjrod@gmail.com"},
]
dependencies = ["mkdocs-material>=9.6.14"]
requires-python = "==3.10.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
